set up postcss, language and fonts

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,9 @@
 // component imports
 import MainHead from "./MainHead.astro";
 
+// style imports
+import "../styles/global.css";
+
 export interface Props {
   title?: string;
   description?: string;
@@ -14,28 +17,9 @@ const {
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
   <MainHead title={title} description={description} />
   <body>
     <slot />
-    <style is:global>
-      :root {
-        --accent: 124, 58, 237;
-        --accent-gradient: linear-gradient(
-          45deg,
-          rgb(var(--accent)),
-          #da62c4 30%,
-          white 60%
-        );
-      }
-      html {
-        font-family: system-ui, sans-serif;
-        background-color: #f6f6f6;
-      }
-      code {
-        font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-          DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-      }
-    </style>
   </body>
 </html>
