--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,8 @@
 ---
 // component imports
 import MainHead from "./MainHead.astro";
+import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 
 // style imports
 import "../styles/global.css";
@@ -20,6 +22,8 @@ const {
 <html lang="he" dir="rtl">
   <MainHead title={title} description={description} />
   <body>
+    <Nav />
     <slot />
+    <Footer />
   </body>
 </html>
