change the font import to fit tailwind

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,4 @@
 ---
-// library imports
-import { Icon } from "astro-icon";
-
 // component imports
 import Link from "./Link.astro";
 
@@ -24,13 +21,14 @@ const navLinks: { name: string; path: string }[] = [
 ];
 ---
 
-<nav>
-  <div class="navbar">
-    <a href="/" class="logomark" aria-label="Go home">
-      <img src={logo} width="60" alt="logo mark" />
-    </a>
+<header class="flex justify-between">
+  <a href="/" class="logomark" aria-label="Go home">
+    <img src={logo} width="60" alt="logo mark" />
+  </a>
+  <nav>
     <ul>
       {navLinks.map(item => <Link href={item.path} text={item.name} />)}
     </ul>
-  </div>
-</nav>
+  </nav>
+  <Link href="/צור-קשר/" text="צרו קשר" />
+</header>
