--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,10 @@
 ---
+// library imports
+import { Image } from "@astrojs/image/components";
+
 // component imports
 import Link from "./Link.astro";
+import Hamburger from "./Hamburger.astro";
 
 // images imports
 import logo from "../images/logo.png";
@@ -21,14 +25,33 @@ const navLinks: { name: string; path: string }[] = [
 ];
 ---
 
-<header class="flex justify-between">
-  <a href="/" class="logomark" aria-label="Go home">
-    <img src={logo} width="60" alt="logo mark" />
-  </a>
-  <nav>
-    <ul>
+<header class="fixed w-full bg-red-200 ease-in duration-300">
+  <div
+    class="flex justify-between items-center xmax-w-screen-2xl mx-auto px-3 md:px-11 md:py-2"
+  >
+    <!-- mobile menu  -->
+    <Hamburger />
+
+    <div class="hidden fixed z-49 inset-0">
+      <!-- overlay -->
+      <div class="fixed inset-0 bg-black/30 backdrop-blur-sm"></div>
+
+      <nav
+        class="flex flex-col gap-7 fixed inset-y-0 right-full left-1/4 bg-white px-11 py-32 font-bold"
+      >
+        <Link href="/" text="בית" />
+        {navLinks.map(item => <Link href={item.path} text={item.name} />)}
+        <Link href="/צור-קשר/" text="צרו קשר" />
+      </nav>
+    </div>
+
+    <!-- large screen menu -->
+    <a href="/" class="w-12 md:w-16" aria-label="Go home">
+      <img src={logo.src} alt="logomark" />
+    </a>
+    <nav class="hidden gap-16 md:flex">
       {navLinks.map(item => <Link href={item.path} text={item.name} />)}
-    </ul>
-  </nav>
-  <Link href="/צור-קשר/" text="צרו קשר" />
+    </nav>
+    <Link href="/צור-קשר/" text="צרו קשר" classes="hidden font-bold md:block" />
+  </div>
 </header>
