--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -8,4 +8,4 @@ interface Props {
 const { text, href, classes, ...rest } = Astro.props;
 ---
 
-<a href={href} class:list={["link", classes]} {...rest}>{text}</a>
+<a href={href} class:list={["hover:opacity-70", classes]} {...rest}>{text}</a>
