--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+.scroll {
+  @apply bg-white/95;
+}
+
 /* hamburger/close icon animation */
 .line {
   @apply w-full h-1 bg-slate-600 rounded-lg transform transition duration-200 ease-in-out;
