fix some header issues

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import logo from "../images/logo.png";
 import { navLinks } from "../data";
 ---
 
-<header class="sticky top-0">
+<header class="fixed w-full top-0 transition">
   <div
     class="flex justify-between items-center max-w-7xl mx-auto px-3 sm:px-6 sm:py-1 md:px-11 md:py-2"
   >
