--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,15 @@
-<section>
+---
+import Link from "./Link.astro";
+---
+
+<section class="bg-bg pt-24 md:pt-60">
   <div>
     <h1>
       <span>מיקוד</span>
       ניהול אנשים מכוון מטרה
     </h1>
+    <h2>טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ</h2>
+    <Link href="/צור-קשר/" text="צרו קשר" />
   </div>
 
   <div class="">
