fix font issues

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,71 +2,17 @@
 import Link from "./Link.astro";
 ---
 
-<section class="bg-bg pt-24 md:pt-60">
+<section class="flex bg-bg-green pt-24 px-4 pb-12 md:pt-60">
   <div>
-    <h1>
-      <span>מיקוד</span>
+    <h1 class="font-headings text-main-green text-4xl font-bold">
+      <span class="block text-dark-blue">מיקוד</span>
       ניהול אנשים מכוון מטרה
     </h1>
-    <h2>טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ</h2>
-    <Link href="/צור-קשר/" text="צרו קשר" />
-  </div>
-
-  <div class="">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur,
-    dolores totam. Dolore dolor architecto labore maxime rerum ipsum illum
-    corporis suscipit voluptate rem, error ut! Fuga ratione at accusantium vero?
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quod quidem
-    illum error soluta expedita commodi, voluptas omnis voluptatibus repudiandae
-    aspernatur tempore cumque architecto voluptatum dolores consectetur
-    accusamus dolorum dolor fuga at autem nam tempora, explicabo maxime! Facere
-    recusandae sint quia ipsum qui ipsa ratione, praesentium itaque ipsam
-    placeat. Blanditiis itaque tenetur dolore fugit assumenda quia ex eum
-    molestiae, quas ipsum veniam deserunt accusamus molestias dolorum tempora
-    adipisci sunt eos ratione! Nostrum ut voluptas autem, aspernatur eligendi,
-    velit accusamus pariatur nisi ad maiores accusantium possimus dolor odit,
-    vitae quia. Laborum accusamus eligendi nisi deserunt delectus blanditiis
-    atque fugiat optio, perferendis quam rerum ab quisquam culpa libero
-    inventore quae repellendus aut? Excepturi tenetur distinctio nulla hic
-    obcaecati delectus reprehenderit officiis enim voluptatum tempore,
-    necessitatibus beatae aut perspiciatis maxime eos! Impedit ad dignissimos
-    placeat vero fugiat enim est unde nisi amet. Ullam distinctio cum harum. Hic
-    dolor aliquam ducimus nemo officia fugit incidunt iste modi dolorum possimus
-    recusandae eligendi aut aperiam iusto, nobis quod sed saepe reprehenderit
-    praesentium. Provident porro in commodi amet vel labore corporis earum,
-    nesciunt id iure repellendus nostrum esse voluptates ipsa exercitationem
-    saepe vitae! Similique temporibus officia ad nesciunt repudiandae
-    voluptatem, inventore ut officiis dicta asperiores labore voluptas, eos,
-    quod reiciendis eveniet non animi assumenda quibusdam accusamus aut culpa.
-    Repudiandae, labore maxime fugit dolor debitis officiis maiores aliquid iste
-    et, adipisci reiciendis quo quibusdam voluptatibus! Quasi soluta repellat,
-    fugiat est aperiam mollitia ipsum perspiciatis? Cumque error reiciendis
-    aspernatur odit? Tenetur ut quasi eius nobis autem quis, repellat totam,
-    cupiditate ad quas possimus consectetur aperiam cumque dolorum mollitia, non
-    fugiat debitis. Mollitia, quod dicta explicabo minima officiis asperiores
-    consectetur eos! Esse fugit modi, odit labore sint doloremque cupiditate
-    aliquid dolor eaque est corporis ipsam numquam dolores corrupti, qui atque
-    dolorum laborum, reprehenderit non in. Quas optio natus itaque suscipit
-    eligendi, est voluptatem esse odit necessitatibus aut, fugit aperiam quo
-    consequatur magnam? Dolor atque saepe voluptatum tempore minus nihil,
-    laborum fugiat aliquam nesciunt molestiae. Enim qui laborum perferendis
-    cumque deserunt hic accusamus inventore? Reprehenderit excepturi
-    consequuntur quo consectetur quos vel architecto aliquam modi, delectus et
-    nisi, fugit corrupti, ab facilis accusamus nulla iusto praesentium sapiente
-    maxime sunt. Aliquam, quisquam ratione deserunt velit laborum nostrum non
-    blanditiis maxime. Aliquid minima cupiditate explicabo laudantium quae ad
-    nulla ea harum iste laboriosam itaque illum at cumque mollitia eum facere
-    vitae nisi enim impedit tempora maiores odio, architecto repellat quam?
-    Consequatur corrupti quisquam, eveniet asperiores nesciunt maiores quos
-    alias nemo sapiente a doloremque. Ipsa fugit rerum eveniet rem cum fugiat
-    sed quis error ducimus quod ipsam, temporibus nesciunt, sequi itaque quidem
-    recusandae dolor quisquam doloribus. Consequatur, commodi. Dignissimos amet
-    accusantium illo quo facere voluptas unde. Illo inventore, cupiditate
-    impedit velit deserunt, sint porro fugit corrupti minus quas similique
-    perspiciatis sunt at! Rerum, voluptates aliquid cum voluptas fugit itaque
-    eum mollitia, nobis ipsum voluptatum modi. Quisquam sequi aperiam ut quos
-    animi magnam, minus consequatur adipisci quae eligendi cupiditate, rerum
-    soluta debitis voluptatem doloremque maiores expedita temporibus. Earum
-    omnis illum nostrum nam, corporis recusandae quidem consequatur.
+    <h2 class="">טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ</h2>
+    <Link
+      href="/צור-קשר/"
+      text="דברו איתנו"
+      classes={"inline-block px-4 py-1 bg-main-green text-white rounded-full"}
+    />
   </div>
 </section>
