--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,9 +11,9 @@ import logo from "../images/logo.png";
 import { navLinks } from "../data";
 ---
 
-<header class="fixed w-full top-0 transition">
+<header class="fixed w-full top-0 ease-in duration-300">
   <div
-    class="flex justify-between items-center max-w-7xl mx-auto px-3 sm:px-6 sm:py-1 md:px-11 md:py-2"
+    class="flex justify-between items-center max-w-7xl mx-auto px-4 py-2 sm:px-6 md:px-11 md:py-3"
   >
     <!-- mobile menu islands  -->
     <Hamburger client:idle />
@@ -33,7 +33,7 @@ import { navLinks } from "../data";
     <Link
       href="/צור-קשר/"
       text="צרו קשר"
-      classes="hidden md:font-bold md:block md:text-white md:bg-black md:px-5 py-2 md:rounded"
+      classes="hidden md:block text-white bg-black px-6 py-2 rounded"
     />
   </div>
 </header>
