--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -9,4 +9,11 @@ const { title, description } = Astro.props;
   <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
   <meta name="description" content={description} />
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Rubik:wght@400;700;900&display=swap"
+    rel="stylesheet"
+  />
 </head>
