--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,17 +2,20 @@
 import Link from "./Link.astro";
 ---
 
-<section class="flex bg-bg-green pt-24 px-4 pb-12 md:pt-60">
-  <div>
-    <h1 class="font-headings text-main-green text-4xl font-bold">
-      <span class="block text-dark-blue">מיקוד</span>
-      ניהול אנשים מכוון מטרה
-    </h1>
-    <h2 class="">טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ</h2>
-    <Link
-      href="/צור-קשר/"
-      text="דברו איתנו"
-      classes={"inline-block px-4 py-1 bg-main-green text-white rounded-full"}
-    />
-  </div>
+<section class="bg-bg-green pt-24 px-4 pb-12 md:pt-60">
+  <h1 class="flex flex-col items-start text-text-color text-4xl font-bold mb-8">
+    <span class="relative">
+      <span
+        class="absolute left-0 right-0 bottom-1 h-1/3 bg-aqua"
+        aria-hidden="true"></span>
+      <span class="relative"> מיקוד</span>
+    </span>
+    <span class="mt-2"> ניהול אנשים מכוון מטרה</span>
+  </h1>
+  <h2 class="text-xl mb-12">טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ</h2>
+  <Link
+    href="/צור-קשר/"
+    text="דברו איתנו"
+    classes={"inline-block font-bold px-5 py-1 bg-aqua border-2 border-text-color rounded-full"}
+  />
 </section>
