--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,21 +1,42 @@
 ---
+// components imports
 import Link from "./Link.astro";
+
+// library imports
+import { Image } from "@astrojs/image/components";
+
+// image imports
+import heroImg from "../images/hero-collaboration-cropped.svg";
 ---
 
-<section class="bg-bg-green pt-24 px-4 pb-12 md:pt-60">
-  <h1 class="flex flex-col items-start text-text-color text-4xl font-bold mb-8">
-    <span class="relative">
-      <span
-        class="absolute left-0 right-0 bottom-1 h-1/3 bg-aqua"
-        aria-hidden="true"></span>
-      <span class="relative"> מיקוד</span>
-    </span>
-    <span class="mt-2"> ניהול אנשים מכוון מטרה</span>
-  </h1>
-  <h2 class="text-xl mb-12">טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ</h2>
-  <Link
-    href="/צור-קשר/"
-    text="דברו איתנו"
-    classes={"inline-block font-bold px-5 py-1 bg-aqua border-2 border-text-color rounded-full"}
-  />
+<section class="bg-bg-green pt-24 px-4 pb-16 md:pt-44 md:px-24">
+  <div class="max-w-screen-xl mx-auto lg:grid grid-cols-2 items-center gap-24">
+    <div>
+      <h1
+        class="flex flex-col items-start text-text-color text-4xl font-bold mb-8 md:text-5xl"
+      >
+        <span class="relative">
+          <span
+            class="absolute left-0 right-0 bottom-1 h-1/4 bg-aqua"
+            aria-hidden="true"></span>
+          <span class="relative"> מיקוד</span>
+        </span>
+        <span class="mt-2"> ניהול אנשים מכוון מטרה</span>
+      </h1>
+      <h2 class="text-xl mb-12 md:text-2xl">
+        טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ
+      </h2>
+      <Link
+        href="/צור-קשר/"
+        text="דברו איתנו"
+        classes={"inline-block font-bold px-5 py-1 bg-aqua border-2 border-text-color rounded-full md:text-xl"}
+      />
+    </div>
+    <Image
+      src={heroImg}
+      alt="People collaborating illustation"
+      format="svg"
+      class="hidden lg:block"
+    />
+  </div>
 </section>
