--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import logo from "../images/logo.png";
 import { navLinks } from "../data";
 ---
 
-<header class="fixed w-full top-0 ease-in duration-300">
+<header class="fixed z-10 w-full top-0 ease-in duration-300">
   <div
     class="flex justify-between items-center max-w-screen-2xl mx-auto px-4 py-2 sm:px-6 md:px-11 md:py-3"
   >
