finish the features section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,13 @@
 ---
-import Hero from "../components/Hero.astro";
+// layout imports
 import MainLayout from "../layouts/MainLayout.astro";
+
+// components imports
+import Hero from "../components/Hero.astro";
+import Features from "../components/Features.astro";
 ---
 
 <MainLayout>
   <Hero />
+  <Features />
 </MainLayout>
