finish the why-us page

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ import heroImg from "../images/hero-collaboration-cropped.svg";
       <Link
         href="/צור-קשר/"
         text="דברו איתנו"
-        classes={"inline-block font-bold px-5 py-1 bg-aqua border-2 border-text-color rounded-full md:text-xl"}
+        classes={"inline-block text-black font-bold px-5 py-1 bg-aqua border-2 border-text-color rounded-full md:text-xl"}
       />
     </div>
     <Image
