--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -8,7 +8,7 @@ import { features } from "../data";
 <section class="grid grid-cols-2 p-4 gap-5 sm:grid-cols-3 md:grid-cols-6">
   {
     features.map(feature => (
-      <div class="flex flex-col items-center text-center">
+      <div class="flex flex-col items-center text-base text-center">
         <div class={`${feature.color} w-10 p-2  rounded-full`}>
           <Icon name={feature.icon} />
         </div>
