--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,7 +22,7 @@ const {
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
   <MainHead title={title} description={description} />
-  <body class="text-slate-600">
+  <body class="text-slate-600 text-lg">
     <Header />
     <main>
       <slot />
