--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -1,7 +1,53 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import PageLayout from "../layouts/PageLayout.astro";
 ---
 
 <MainLayout>
-  <h1>למה אנחנו?</h1>
+  <PageLayout heading="למה אנחנו?">
+    <div
+      class="max-w-3xl mx-auto mb-8 p-4 hover:border-e-4 hover:border-aqua ease-in-out duration-200"
+    >
+      <h2
+        class="text-green-logo/70 text-xl font-bold tracking-wider mb-4 md:text-3xl"
+      >
+        למה אנו מתחייבים?
+      </h2>
+      <p class="text-text-color/60 text-xl">
+        תמיכה בניהול מקצועי ואחראי של ההון האנושי שלכם במיקור חוץ, החל מביצוע
+        פרויקטים ממוקדים בתחום משאבי אנוש וכלה בניהול שוטף של מערך משאבי האנוש,
+        וליווי מקצועי של מחזור החיים של כל עובד בארגון.
+      </p>
+    </div>
+
+    <div
+      class="max-w-3xl mx-auto mb-8 p-4 hover:border-e-4 hover:border-aqua ease-in-out duration-200"
+    >
+      <h2
+        class="text-green-logo/70 text-xl font-bold tracking-wider mb-4 md:text-3xl"
+      >
+        למה אנחנו?
+      </h2>
+      <p class="text-text-color/60 text-xl">
+        לניסיון אין מחיר ולמקצוענות אין תחליף. הלקוחות שלנו נהנים משני העולמות –
+        לצוות שלנו ניסיון של מעל 30 שנה, וידע אקדמי ומקצועי עשיר במשאבי אנוש
+        שעומד לרשותכם ומחויב להצלחה שלכם ושל הצוות שלכם.
+      </p>
+    </div>
+
+    <div
+      class="max-w-3xl mx-auto mb-8 p-4 hover:border-e-4 hover:border-aqua ease-in-out duration-200"
+    >
+      <h2
+        class="text-green-logo/70 text-xl font-bold tracking-wider mb-4 md:text-3xl"
+      >
+        למה אתם?
+      </h2>
+      <p class="text-text-color/60 text-xl">
+        כי אתם רוצים להתמקד בפעילות העיקרית של הארגון שלכם, עם ביטחון מלא
+        שהארגון שלכם עומד בכל דרישות החוק ושהעובדים שלכם מטופלים במקצועיות
+        ואנושיות על-ידי צוות מחויב ומסור.
+      </p>
+    </div>
+  </PageLayout>
 </MainLayout>
