--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,7 +22,9 @@ const {
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
   <MainHead title={title} description={description} />
-  <body class="text-slate-600 text-lg">
+  <body
+    class="flex flex-col justify-between text-slate-600 text-lg min-h-screen"
+  >
     <Header />
     <main>
       <slot />
