change some font and gap sizes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ import { navLinks } from "../data";
     </MobileMenu>
 
     <!-- larger devices menu -->
-    <a href="/" class="w-12 md:w-16" aria-label="Go home">
+    <a href="/" class="w-12 md:ml-16 md:w-16" aria-label="Go home">
       <img src={logo.src} alt="logomark" />
     </a>
     <nav class="hidden gap-16 md:flex">
