--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -5,13 +5,7 @@ interface Props {
 const { heading } = Astro.props;
 ---
 
-<div class="px-6 pt-24 md:pt-44">
-  <!-- <h1
-    class="text-green-logo mt-4 mb-16 text-4xl font-bold text-center md:text-5xl"
-  >
-  
-    {heading}
-  </h1> -->
+<div class="px-6 pt-24 pb-10 md:pt-44">
   <h1
     class="flex flex-col items-center mt-4 mb-8 text-text-color text-4xl font-bold md:text-5xl md:mb-16"
   >
