--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -9,7 +9,7 @@ import PageLayout from "../layouts/PageLayout.astro";
       class="max-w-3xl mx-auto mb-8 p-4 hover:border-e-4 hover:border-aqua ease-in-out duration-200"
     >
       <h2
-        class="text-green-logo/70 text-xl font-bold tracking-wider mb-4 md:text-3xl"
+        class="text-green-logo/70 text-2xl font-bold tracking-wider mb-4 md:text-3xl"
       >
         למה אנו מתחייבים?
       </h2>
@@ -24,7 +24,7 @@ import PageLayout from "../layouts/PageLayout.astro";
       class="max-w-3xl mx-auto mb-8 p-4 hover:border-e-4 hover:border-aqua ease-in-out duration-200"
     >
       <h2
-        class="text-green-logo/70 text-xl font-bold tracking-wider mb-4 md:text-3xl"
+        class="text-green-logo/70 text-2xl font-bold tracking-wider mb-4 md:text-3xl"
       >
         למה אנחנו?
       </h2>
@@ -39,7 +39,7 @@ import PageLayout from "../layouts/PageLayout.astro";
       class="max-w-3xl mx-auto mb-8 p-4 hover:border-e-4 hover:border-aqua ease-in-out duration-200"
     >
       <h2
-        class="text-green-logo/70 text-xl font-bold tracking-wider mb-4 md:text-3xl"
+        class="text-green-logo/70 text-2xl font-bold tracking-wider mb-4 md:text-3xl"
       >
         למה אתם?
       </h2>
