--- a/src/pages/שירותים.astro
+++ b/src/pages/שירותים.astro
@@ -1,7 +1,8 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import PageLayout from "../layouts/PageLayout.astro";
 ---
 
 <MainLayout>
-  <h1>שירותים</h1>
+  <PageLayout heading="שירותים" />
 </MainLayout>
