--- a/src/pages/אודות.astro
+++ b/src/pages/אודות.astro
@@ -1,7 +1,35 @@
 ---
+// library imports
+import { Image } from "@astrojs/image/components";
+// layouts imports
 import MainLayout from "../layouts/MainLayout.astro";
+import PageLayout from "../layouts/PageLayout.astro";
+
+// images imports
+import ariel from "../images/ariel.jpg";
+import nissim from "../images/nissim.jpg";
 ---
 
 <MainLayout>
-  <h1>אודות</h1>
+  <PageLayout heading="מי אנחנו?">
+    <section
+      class="flex flex-col justify-center items-center gap-8 md:flex-row"
+    >
+      <Image
+        src={nissim}
+        alt="Nissim Cohen"
+        width={300}
+        aspectRatio="1:1"
+        class="rounded-full"
+      />
+      <div>
+        <h2
+          class="text-green-logo text-2xl font-bold tracking-wider md:text-3xl"
+        >
+          ניסים כהן
+        </h2>
+        <h3 class="text-green-logo/70 text-xl">מנכ״ל</h3>
+      </div>
+    </section>
+  </PageLayout>
 </MainLayout>
