migrate from @astrojs/image to astro:assets

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 // images imports
-import logo from "../images/logo.png";
+import logo from "../assets/logo.png";
 ---
 
 <footer class="bg-bg-green p-4">
