--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { Hamburger } from "./Hamburger.jsx";
 import { MobileMenu } from "./MobileMenu";
 
 // images imports
-import logo from "../images/logo.png";
+import logo from "../assets/logo.png";
 
 // data imports
 import { navLinks } from "../data";
