--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,10 +3,10 @@
 import Link from "./Link.astro";
 
 // library imports
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 
 // image imports
-import heroImg from "../images/hero-collaboration-cropped.svg";
+import heroImg from "../assets/hero-collaboration-cropped.svg";
 ---
 
 <section
@@ -34,10 +34,9 @@ import heroImg from "../images/hero-collaboration-cropped.svg";
         classes={"inline-block text-black font-bold px-5 py-1 bg-aqua border-2 border-text-color rounded-full md:text-xl"}
       />
     </div>
-    <Image
-      src={heroImg}
+    <img
+      src={heroImg.src}
       alt="People collaborating illustation"
-      format="svg"
       class="hidden lg:block"
     />
   </div>
