finish the about page with team collection

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -5,9 +5,9 @@ interface Props {
 const { heading } = Astro.props;
 ---
 
-<div class="px-6 pt-24 pb-10 md:pt-44">
+<div class="max-w-7xl mx-auto px-6 pt-24 pb-10 sm:px-12 md:px-24 md:pt-44">
   <h1
-    class="flex flex-col items-center mt-4 mb-8 text-text-color text-4xl font-bold md:text-5xl md:mb-16"
+    class="flex flex-col items-center mt-4 mb-12 text-text-color text-4xl font-bold md:text-5xl md:mb-16"
   >
     <span class="relative">
       <span
