finish home page's services intro section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,11 @@ import MainLayout from "../layouts/MainLayout.astro";
 // components imports
 import Hero from "../components/Hero.astro";
 import Features from "../components/Features.astro";
+import ServicesIntro from "../components/ServicesIntro.astro";
 ---
 
 <MainLayout>
   <Hero />
   <Features />
+  <ServicesIntro />
 </MainLayout>
