--- a/src/pages/אודות.astro
+++ b/src/pages/אודות.astro
@@ -13,7 +13,7 @@ import TeamMember from "../components/TeamMember.astro";
 
 <MainLayout>
   <PageLayout heading="אודות">
-    <p class="text-green-logo mb-16">
+    <p class="bg-bg-green max-w-2xl mx-auto mb-20 p-5 rounded shadow">
       הצוות המקצועי שלנו ישמח להעמיד לרשותכם את הידע והניסיון שלו במגוון משימות
       כולל גיוס, קליטה בארגון או בתפקיד חדש, הפקת משכורות ובנית מערך שכר, בנית
       מערך הערכה ותוכניות רווחה וקידום לעובדים, ייעוץ במהלכי כוח-אדם אסטרטגיים,
