--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon";
 import { features } from "../data";
 ---
 
-<section class="grid grid-cols-2 p-4 gap-5 sm:grid-cols-3 md:grid-cols-6">
+<section class="grid grid-cols-2 px-4 py-8 gap-5 sm:grid-cols-3 md:grid-cols-6">
   {
     features.map(feature => (
       <div class="flex flex-col items-center text-base text-center">
