--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,10 +1,16 @@
 ---
 // component imports
 import Link from "../components/Link.astro";
+import SubCTA from "../components/SubCTA.astro";
 import MainLayout from "../layouts/MainLayout.astro";
+import PageLayout from "../layouts/PageLayout.astro";
 ---
 
 <MainLayout title="Page Not Found">
-  <h1>אופס... הגעת לעמוד שאינו קיים</h1>
-  <Link href="/" text="לעמוד הבית" />
+  <PageLayout heading="404">
+    <div class="text-center">
+      <h2>אופס... הגעת לעמוד שאינו קיים</h2>
+      <SubCTA href="/" btnText="לחצו כאן" text="לחזרה לעמוד הבית" />
+    </div>
+  </PageLayout>
 </MainLayout>
