--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -1,4 +1,5 @@
 ---
+import SubCTA from "../components/SubCTA.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import PageLayout from "../layouts/PageLayout.astro";
 ---
@@ -49,5 +50,7 @@ import PageLayout from "../layouts/PageLayout.astro";
         ואנושיות על-ידי צוות מחויב ומסור.
       </p>
     </div>
+
+    <SubCTA />
   </PageLayout>
 </MainLayout>
