--- a/src/pages/שירותים.astro
+++ b/src/pages/שירותים.astro
@@ -1,8 +1,10 @@
 ---
+import SubCTA from "../components/SubCTA.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import PageLayout from "../layouts/PageLayout.astro";
 ---
 
 <MainLayout>
   <PageLayout heading="שירותים" />
+  <SubCTA />
 </MainLayout>
