finish the services page

--- a/src/components/TeamMember.astro
+++ b/src/components/TeamMember.astro
@@ -2,6 +2,7 @@
 // library imports
 import { Image } from "astro:assets";
 
+// content imports
 import type { CollectionEntry } from "astro:content";
 
 interface Props {
