add small changes

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,9 +16,9 @@ import heroImg from "../assets/hero-collaboration-cropped.svg";
       >
         <span class="relative">
           <span
-            class="absolute left-0 right-0 bottom-1 h-1/4 bg-aqua"
+            class="absolute left-0 right-0 bottom-0.5 h-1/4 bg-aqua"
             aria-hidden="true"></span>
-          <span class="relative"> מיקוד</span>
+          <span class="relative">מקוד</span>
         </span>
         <span class="mt-2"> ניהול אנשים מכוון מטרה</span>
       </h1>
