--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -7,6 +7,12 @@
         method="POST"
         action="/success"
       > -->
+  <!-- <form
+    name="contact"
+    method="POST"
+    data-netlify="true"
+    class="space-y-4 text-base"
+  > -->
   <form class="space-y-4 text-base">
     <p class="hidden">
       <label>
