change CTA button color

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -55,7 +55,7 @@
 
     <button
       type="submit"
-      class="bg-salmon text-xl font-bold px-8 py-1 border-black border-2 rounded-full"
+      class="bg-purple-300 text-xl font-bold px-8 py-1 border-black border-2 rounded-full"
     >
       שלחו
     </button>
