--- a/src/components/SubCTA.astro
+++ b/src/components/SubCTA.astro
@@ -21,6 +21,6 @@ const {
   <Link
     href={href}
     text={btnText}
-    classes={"inline-block text-black font-bold px-5 py-1 bg-salmon border-2 border-text-color rounded-full md:text-xl"}
+    classes={"inline-block text-black font-bold px-5 py-1 bg-purple-300 border-2 border-text-color rounded-full md:text-xl"}
   />
 </div>
