--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,5 @@ import SubCTA from "../components/SubCTA.astro";
   <Hero />
   <Features />
   <ServicesIntro />
-  <SubCTA
-    btnText="לחצו כאן"
-    text="לפרטים נוספים על כל השירותים שלנו"
-    href="/שירותים/"
-  />
+  <SubCTA btnText="לחצו כאן" text="לפירוט כל השירותים שלנו" href="/שירותים/" />
 </MainLayout>
