--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,23 +1,29 @@
 ---
 // library imports
 import { Icon } from "astro-icon";
-// data imports
-import { features } from "../data";
+
+// content imports
+import { getCollection } from "astro:content";
+
+const serviceEntries = await getCollection("services");
 ---
 
 <section class="grid grid-cols-2 px-4 py-8 gap-5 sm:grid-cols-3 md:grid-cols-6">
   {
-    features.map(feature => (
-      <div class="flex flex-col items-center text-base text-center">
-        <div class={`${feature.color} w-10 p-2  rounded-full`}>
-          <Icon name={feature.icon} />
+    serviceEntries.map(entry => (
+      <a
+        href={`/שירותים#${entry.data.id}`}
+        class="flex flex-col items-center text-base text-center"
+      >
+        <div class={`${entry.data.color} w-10 p-2  rounded-full`}>
+          <Icon name={entry.data.icon} />
         </div>
         <div>
           <p>
-            <span class="block">{feature.line1}</span> {feature.line2}
+            <span class="block">{entry.data.line1}</span> {entry.data.line2}
           </p>
         </div>
-      </div>
+      </a>
     ))
   }
 </section>
