--- a/src/pages/שירותים.astro
+++ b/src/pages/שירותים.astro
@@ -15,7 +15,7 @@ const servicesEntries = await getCollection("services");
 
 <MainLayout>
   <PageLayout heading="שירותים">
-    <div class="flex flex-col gap-12 lg:gap-16">
+    <div class="">
       {servicesEntries.map(entry => <Service service={entry} />)}
     </div>
     <SubCTA />
