some text changes

--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -16,8 +16,8 @@ import PageLayout from "../layouts/PageLayout.astro";
       </h2>
       <p class="text-text-color/60 text-xl">
         לניסיון אין מחיר ולמקצוענות אין תחליף. הלקוחות שלנו נהנים משני העולמות –
-        לצוות שלנו ניסיון של מעל 30 שנה, וידע אקדמי ומקצועי עשיר במשאבי אנוש
-        שעומד לרשותכם ומחויב להצלחה שלכם ושל הצוות שלכם.
+        לצוות שלנו ניסיון של מעל 30 שנה, וידע אקדמי ומקצועי עשיר בעולמות משאבי
+        האנוש, ניסיון וידע שעומדים לרשותכם ומחויבים להצלחה שלכם.
       </p>
     </div>
 
@@ -30,9 +30,9 @@ import PageLayout from "../layouts/PageLayout.astro";
         למה אתם?
       </h2>
       <p class="text-text-color/60 text-xl">
-        כי אתם רוצים להתמקד בפעילות העיקרית של הארגון שלכם, עם ביטחון מלא
-        שהארגון שלכם עומד בכל דרישות החוק ושהעובדים שלכם מטופלים במקצועיות
-        ואנושיות על-ידי צוות מחויב ומסור.
+        כי אתם רוצים להתמקד בפעילות העיקרית של הארגון שלכם, עם ביטחון מלא שאתם
+        עומדים בכל דרישות החוק ושהעובדים שלכם מטופלים במקצועיות ואנושיות על-ידי
+        צוות מחויב ומסור.
       </p>
     </div>
 
@@ -45,9 +45,8 @@ import PageLayout from "../layouts/PageLayout.astro";
         למה אנו מתחייבים?
       </h2>
       <p class="text-text-color/60 text-xl">
-        תמיכה בניהול מקצועי ואחראי של ההון האנושי שלכם במיקור חוץ, החל מביצוע
-        פרויקטים ממוקדים בתחום משאבי אנוש וכלה בניהול שוטף של מערך משאבי האנוש,
-        וליווי מקצועי של מחזור החיים של כל עובד בארגון.
+        תמיכה בניהול מקצועי ואחראי של ההון האנושי שלכם, החל מביצוע פרויקטים
+        ממוקדים בתחום משאבי אנוש וכלה בניהול כולל של מערך משאבי האנוש בארגון.
       </p>
     </div>
 
