--- a/src/pages/צור-קשר.astro
+++ b/src/pages/צור-קשר.astro
@@ -12,11 +12,7 @@ import illustation from "../assets/letter-exchange.svg";
 ---
 
 <MainLayout>
-  <PageLayout heading="צרו קשר">
-    <h2 class="text-green-logo/70 font-bold text-center mb-8 md:text-xl">
-      תוכלו ליצור איתנו קשר באמצעות הדרכים הבאות:
-    </h2>
-
+  <PageLayout heading="דברו איתנו">
     <section class="">
       <ContactMedia />
       <div class="lg:grid grid-cols-2 gap-8">
