--- a/src/pages/אודות.astro
+++ b/src/pages/אודות.astro
@@ -15,12 +15,17 @@ const teamEntries = await getCollection("team");
 
 <MainLayout>
   <PageLayout heading="אודות">
-    <p class="bg-bg-green max-w-2xl mx-auto mb-20 p-5 rounded shadow">
-      הצוות המקצועי שלנו ישמח להעמיד לרשותכם את הידע והניסיון שלו במגוון משימות
-      כולל גיוס, קליטה בארגון או בתפקיד חדש, הפקת משכורות ובנית מערך שכר, בנית
-      מערך הערכה ותוכניות רווחה וקידום לעובדים, ייעוץ במהלכי כוח-אדם אסטרטגיים,
-      ניהול התקשרות הפורמאלית עם העובד ועוד.
-    </p>
+    <div class="bg-bg-green max-w-2xl mx-auto mb-20 p-5 rounded shadow">
+      <p>
+        הצוות המקצועי שלנו ישמח להעמיד לרשותכם את הידע והניסיון שלו במגוון
+        משימות משאבי האנוש.
+      </p>
+      <p>
+        השירותים שלנו כוללים תמיכה גיוס בתהליכי, קליטה בארגון או בתפקיד חדש,
+        הפקת משכורות ובנית מערכות שכר ונוכחות, בנית מערך הערכה וקידום לעובדים,
+        ייעוץ במהלכי כוח-אדם אסטרטגיים, בניית תוכניות רווחה ועוד.
+      </p>
+    </div>
     {teamEntries.map(entry => <TeamMember member={entry} />)}
     <SubCTA />
   </PageLayout>
