--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,8 +12,9 @@ import { navLinks } from "../data";
 ---
 
 <header class="fixed z-10 w-full top-0 ease-in duration-300">
+  <!-- class="flex justify-between items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11" -->
   <div
-    class="flex justify-between items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11"
+    class="grid grid-cols-3 justify-items-center items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11"
   >
     <!-- mobile menu islands  -->
     <Hamburger client:idle />
@@ -24,16 +25,21 @@ import { navLinks } from "../data";
     </MobileMenu>
 
     <!-- larger devices menu -->
-    <a href="/" class="w-12 md:ml-16 md:w-16" aria-label="Go home">
-      <img src={logo.src} alt="logomark" />
-    </a>
-    <nav class="hidden gap-16 md:flex">
+    <nav class="hidden lg:flex justify-self-start gap-16">
       {navLinks.map(item => <Link href={item.path} text={item.name} />)}
     </nav>
+    <!-- class="fixed bg-white top-0 left-1/2 w-32 p-4 rounded-b-full" -->
+    <a
+      href="/"
+      class="w-12 bg-white p-2 border-b-2 border-green-logo/70 rounded-b-full scale-[2] translate-y-4 lg:scale-[3.5] lg:translate-y-7"
+      aria-label="Go home"
+    >
+      <img src={logo.src} alt="logomark" />
+    </a>
     <Link
       href="/צור-קשר/"
       text="צרו קשר"
-      classes="hidden md:block text-white bg-black px-6 py-2 rounded"
+      classes="hidden justify-self-end self-end text-white bg-black px-6 py-2 rounded md:block"
     />
   </div>
 </header>
