fix small nav issue

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import { navLinks } from "../data";
 <header class="fixed z-10 w-full top-0 ease-in duration-300">
   <!-- class="flex justify-between items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11" -->
   <div
-    class="grid grid-cols-3 justify-items-center items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11"
+    class="grid grid-cols-[1fr_180px_1fr] justify-items-center items-center max-w-screen-2xl mx-auto px-6 py-3 md:px-11"
   >
     <!-- mobile menu islands  -->
     <Hamburger client:idle />
