--- a/src/components/ContactMedia.astro
+++ b/src/components/ContactMedia.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon";
 ---
 
 <div
-  class="flex flex-col items-center text-center gap-12 max-w-2xl mx-auto my-12 sm:flex-row sm:justify-around md:my-20"
+  class="flex flex-col justify-center items-center text-center gap-12 max-w-2xl mx-auto my-12 sm:flex-row sm:justify-around md:my-20"
 >
   <a href="tel:04-6442777" class="flex flex-col items-center gap-2">
     <Icon name="mdi:phone" class="bg-lime-200 w-10 p-2 rounded-full" />
