small consmetic changes mainly for the logo

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -14,7 +14,7 @@ export interface Props {
 }
 
 const {
-  title = "מיקוד | ניהול אנשים מכוון מטרה",
+  title = "מקוד | ניהול אנשים מכוון מטרה",
   description = "טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ"
 } = Astro.props;
 ---
