--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,7 +30,7 @@ import { navLinks } from "../data";
     <!-- class="fixed bg-white top-0 left-1/2 w-32 p-4 rounded-b-full" -->
     <a
       href="/"
-      class="w-12 bg-white p-2 border-b-2 border-green-logo/70 rounded-b-full scale-[2] translate-y-4 lg:w-16 lg:scale-[2.7] lg:translate-y-7"
+      class="w-12 bg-white p-2 border-b-2 border-light-blue/50 rounded-b-full scale-[2] translate-y-4 lg:w-16"
       aria-label="Go home"
     >
       <img src={logo.src} alt="logomark" />
