--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 import PageLayout from "../layouts/PageLayout.astro";
 ---
 
-<MainLayout title="Page Not Found">
+<MainLayout title="עמוד לא קיים" description="עמוד לא קיים">
   <PageLayout heading="404">
     <div class="text-center">
       <h2>אופס... הגעת לעמוד שאינו קיים</h2>
