--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,10 @@ import ServicesIntro from "../components/ServicesIntro.astro";
 import SubCTA from "../components/SubCTA.astro";
 ---
 
-<MainLayout>
+<MainLayout
+  title="מקוד | ניהול אנשים מכוון מטרה"
+  description="טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ"
+>
   <Hero />
   <Features />
   <ServicesIntro />
