--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -4,7 +4,10 @@ import MainLayout from "../layouts/MainLayout.astro";
 import PageLayout from "../layouts/PageLayout.astro";
 ---
 
-<MainLayout>
+<MainLayout
+  title="למה דווקא אנחנו?"
+  description="ניסיון של מעל 30 שנה וידע אקדמי ומקצועי עשיר בעולמות משאבי האנוש שעומדים לרשותכם ומחויבים להצלחה שלכם"
+>
   <PageLayout heading="למה אנחנו?">
     <div
       class="max-w-3xl mx-auto mb-8 p-4 hover:border-e-4 hover:border-aqua ease-in-out duration-200"
