--- a/src/pages/צור-קשר.astro
+++ b/src/pages/צור-קשר.astro
@@ -11,7 +11,10 @@ import ContactMedia from "../components/ContactMedia.astro";
 import illustation from "../assets/letter-exchange.svg";
 ---
 
-<MainLayout>
+<MainLayout
+  title="צרו קשר"
+  description="צרו עמנו קשר ותיהנו מטיפול אישי ומקצועי בהון האנושי שלכם"
+>
   <PageLayout heading="דברו איתנו">
     <section class="">
       <ContactMedia />
