--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -9,14 +9,11 @@ import "../styles/global.css";
 import "@fontsource/rubik";
 
 export interface Props {
-  title?: string;
-  description?: string;
+  title: string;
+  description: string;
 }
 
-const {
-  title = "מקוד | ניהול אנשים מכוון מטרה",
-  description = "טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ"
-} = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
