--- a/src/pages/למה-אנחנו.astro
+++ b/src/pages/למה-אנחנו.astro
@@ -45,10 +45,11 @@ import PageLayout from "../layouts/PageLayout.astro";
       <h2
         class="text-green-logo/70 text-2xl font-bold tracking-wider mb-4 md:text-3xl"
       >
-        למה אנו מתחייבים?
+        למה אנחנו מתחייבים?
       </h2>
       <p class="text-text-color/60 text-xl">
-        תמיכה בניהול מקצועי ואחראי של ההון האנושי שלכם, החל מביצוע פרויקטים
+        אנו מתחייבים לשירות מקצועי ואדיב ולמענה מהיר ומדוייק לצרכי משאבי האנוש
+        שלכם. <br /> במסגרת זו נשמח לספק לכם טווח רחב של שירותים, החל מביצוע פרויקטים
         ממוקדים בתחום משאבי אנוש וכלה בניהול כולל של מערך משאבי האנוש בארגון.
       </p>
     </div>
