--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,11 +18,11 @@ import heroImg from "../assets/hero-collaboration-cropped.svg";
           <span
             class="absolute left-0 right-0 bottom-0.5 h-1/4 bg-aqua"
             aria-hidden="true"></span>
-          <span class="relative">מקוד</span>
+          <span class="relative">מִקּוּד</span>
         </span>
         <span class="mt-2"> ניהול אנשים מכוון מטרה</span>
       </h1>
-      <h2 class="text-xl mb-12 md:text-2xl">
+      <h2 class="text-xl mb-12 font-bold md:text-2xl">
         טיפול אישי ומקצועי בהון האנושי שלכם במיקור חוץ
       </h2>
       <Link
